Chapter Four complete

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,9 +8,10 @@
     </head>
 
     <body>
-        <h1> Rango says...</h1>
+        <h1> About Rango</h1>
 	    <div>
-	         This tutorial has been put togther by Conor<br />
+		     Rango says here is the about page
+	         <strong> {{ boldmessage }} </strong> <br />
 	    </div>
 	    <div>
 		    <img src= "{{ MEDIA_URL }}cat.jpg"
