--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 
 {% load staticfiles %}
 
-<html>
-    <head>
-        <title> Rango - About </title>
-    </head>
 
-    <body>
-        <h1> About Rango</h1>
-	    <div>
-		     Rango says here is the about page
-	         <strong> {{ boldmessage }} </strong> <br />
-	    </div>
-	    <div>
-		    <img src= "{{ MEDIA_URL }}cat.jpg"
-                 alt="Picture of Cat" />
-		</div>
-		<div>			
-	        <a href="/rango/">Home </a><br />
-			
-		    <img src= "{% static "images/rango.jpg" %}"
-			     alt="Picture of Rango"/>
-	    </div>
-    </body>
+
+
+
+<html>
+
+<head>
+<title>Rango</title>
+</head>
+
+<body>
+
+<div>
+Rango says here is the about page. <br>    
+
+This tutorial has been put together by Conor Begley
+</div>
+<div>
+
+<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+<img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a cat" />
+</div>
+
+</body>
 
 </html>
