--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html> 
 
 {% load staticfiles %}
-
-
-
-
-
 <html>
+    <head>
+        <title>Rango</title>
+    </head>
 
-<head>
-<title>Rango</title>
-</head>
+    <body>
+       <div>
+            Rango says here is the about page. <br>
+            This tutorial has been put together by Conor Begley
 
-<body>
+       </div>
 
-<div>
-Rango says here is the about page. <br>    
-
-This tutorial has been put together by Conor Begley
-</div>
-<div>
-
-<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
-<img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a cat" />
-</div>
-
-</body>
+       <div>
+           <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+           <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a cat" />
+       </div>
+       <div>
+           <a href="/rango/">Index</a>
+       </div>
+    </body>
 
 </html>
