--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-<html>
+<html xmlns="http://www.w3.org/1999/html">
     <head>
         <title> Rango </title>
     </head>
@@ -43,6 +43,8 @@
                There are no pages present
             {% endif %}
         </div>
+
+        <a href="/rango/add_category/">Add a New Category</a> </br>
 
 	    <div>
 	        <a href="/rango/about/">About</a><br />
