--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -29,7 +29,7 @@
                 {% else %}
                     The specified category does not exist!
             {%  endif %}
-        <a href="/rango/category/{{category.slug}}/add_page">Add a Page</a>
+        <a href="/rango/category/{{category.slug}}/add_page">Add Page</a>
         </div>
 
          <div>
