--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html> 
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
 
-    <body>
+{% block title_block %}
+    About
+{% endblock %}
+
+{% block body_block %}
        <div>
             Rango says here is the about page. <br>
             This tutorial has been put together by Conor Begley
@@ -20,6 +19,4 @@
        <div>
            <a href="/rango/">Index</a>
        </div>
-    </body>
-
-</html>
+{%  endblock %}
