--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html lang="en">
+{% block title_block %}
+    {{ category }}
+{% endblock %}
 
-    <head>
-        <title>Rango</title>
-    </head>
-
+{% block body_block %}
 
     <body>
         <div>
@@ -37,6 +37,4 @@
 	    </div>
 
 
-    </body>
-
-</html>
+{% endblock %}
