--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html xmlns="http://www.w3.org/1999/html">
-    <head>
-        <title> Rango </title>
-    </head>
+{% block title_block %}
+    Add a page
+{% endblock %}
 
-    <body>
+{% block body_block %}
         <h1>Rango says...</h1>
 	    <div>
 
@@ -50,6 +48,4 @@
 	        <a href="/rango/about/">About</a><br />
 			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 	    </div>
-    </body>
-
-</html>
+{% endblock %}
