--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    {{ category }}
+    {{ category.name }}
 {% endblock %}
 
 {% block body_block %}
@@ -14,7 +14,6 @@
 
                 {% if pages %}
                     <ul>
-
                         {% for page in pages  %}
                             <li><a href = "{{ page.url }}">{{  page.title }}</a></li>
                         {% endfor %}
@@ -29,12 +28,9 @@
                 {% else %}
                     The specified category does not exist!
             {%  endif %}
-        <a href="/rango/category/{{category.slug}}/add_page">Add Page</a>
+
+            {% if user.is_authenticated %}
+            <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a>
+            {% endif %}
         </div>
-
-         <div>
-	        <a href="/rango/">Index</a>
-	    </div>
-
-
 {% endblock %}
