--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,8 +8,12 @@
 {% block body_block %}
         <h1>Rango says...</h1>
 	    <div>
+            {% if user.is_authenticated %}
+                howdy {{ user.username }}!
+            {% else %}
+                hey there partner! </br>
+            {% endif %}
 
-	          hey there partner ! <br />
 
 	    </div>
         <div>
