--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -46,6 +46,8 @@
             {% endif %}
         </div>
 
+        <p>visits: {{ visits }}</p>
+
         <a href="/rango/add_category/">Add a New Category</a> </br>
 
 	    <div>
