--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,6 +12,8 @@
 
        </div>
 
+       <p>visits: {{ visits }}</p>
+
        <div>
            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
            <img src="{{ MEDIA_URL}}cat.jpg" alt="Picture of a cat" />
